--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/gaemanda?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/yohwan?useSSL=false&serverTimezone=UTC&characterEncoding=UTF-8}
 
 spring.datasource.username=yohwan
 
