--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/yohwan?useSSL=false&serverTimezone=UTC&characterEncoding=UTF-8}
 
-spring.datasource.username=yohwan
+spring.datasource.username=${DB_USERNAME:yowhan}
 
-spring.datasource.password=1324
+spring.datasource.password=${DB_PASSWORD:1324}
 
 spring.jpa.show-sql=true
 
